# prompt-extraction

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
attacks/: 5-gram-attacks.json  attacks.json  generated.json  selected.json
attacks/real-services/bard/: de-en.txt  de-prompt.txt  de.txt  en-prompt.txt  en.txt  es-en.txt  es-prompt.txt  es.txt  fr-en.txt  fr-prompt.txt  fr.txt  nl-en.txt  nl-prompt.txt  nl.txt
attacks/real-services/bing-chat/: ar-en.txt  ar-prompt.txt  ar.txt  fi-en.txt  fi-prompt.txt  fi.txt  ja-en.txt  ja-prompt.txt  ja.txt  zh-en.txt  zh-prompt.txt  zh.txt
attacks/real-services/chatgpt/: de-en.txt  de-prompt.txt  de.txt  ko-en.txt  ko-prompt.txt  ko.txt  pt-en.txt  pt-prompt.txt  pt.txt  zh-en.txt  zh-prompt.txt  zh.txt
attacks/real-services/claude-3-sonnet/: en-prompt.txt  en.txt  es-en.txt  es-prompt.txt  es.txt  fr-en.txt  fr-prompt.txt  fr.txt  pt-en.txt  pt-prompt.txt  pt.txt
data/: dev.jsonl  sharegpt-test.jsonl  unnatural-test.jsonl
scripts/: download.sh  fix-style.sh  sample.py
src/: common.py  evaluate-extraction.py  finetune-similarity-predictor.py  gpt-x-prompt-extraction.py  hf-prompt-extraction.py  llama-chat-prompt-extraction.py
src/guess-model/: gpt-x.py  hf.py  llama-chat.py
